# trello-telegram-tracker

./: .gitignore  .pylintrc  LICENSE  README.md  bot_pinned_messages.json  config.example.yaml  pyproject.toml
.cursor/rules/: PRD.mdc
app/: __init__.py  __main__.py  bot.py  config.py  handlers.py  logger.py  reports.py  scheduler.py  storage.py  trello_api.py
