[project]
name = "trello-bot"
version = "0.1.0"
description = "Telegram bot for Trello board tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
    "colorama>=0.4.6",
    "schedule>=1.2.0",
    "aiohttp>=3.9.0",
    "aiofiles>=24.1.0",
    "aiogram>=3.21.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
